fix(tabs): align WC tab spacing and label baseline with React

--- a/packages/web-components/src/components/tabs/tabs.scss
+++ b/packages/web-components/src/components/tabs/tabs.scss
@@ -19,7 +19,6 @@
 @use '@carbon/styles/scss/layout' as *;
 @use '@carbon/styles/scss/utilities/layout';
 @use '@carbon/styles/scss/utilities/convert';
-@use '@carbon/styles/scss/utilities/visually-hidden';
 @use '@carbon/styles/scss/utilities/skeleton' as *;
 
 $inset-transition: inset 110ms motion(standard, productive);
@@ -113,12 +112,17 @@ $inset-transition: inset 110ms motion(standard, productive);
   outline: none;
 }
 
-:host(#{$prefix}-tab:not([type='contained']))
-  .#{$prefix}--tabs__nav-item--close--hidden {
-  @include visually-hidden.visually-hidden;
+:host(#{$prefix}-tab:not([type='contained'])) {
+  margin-inline-end: convert.to-rem(1px);
 
-  position: static;
-  inline-size: convert.to-rem(3px);
+  .#{$prefix}--tabs__nav-link {
+    padding-block-end: calc(#{$spacing-03} + #{convert.to-rem(1px)});
+    padding-block-start: calc(#{$spacing-04} - #{convert.to-rem(1px)});
+  }
+}
+
+:host(#{$prefix}-tab:not([type='contained']):last-of-type) {
+  margin-inline-end: 0;
 }
 
 :host(#{$prefix}-tab[selected]) {
